[package]
name = "crypto_news"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
yew = { version = "0.21", features = ["csr"] } # Optional if using Yew for frontend
warp = "0.3" # or use actix-web
dotenv = "0.15"
chrono = "0.4"